# cmake-tutorial-002

./: CMakeLists.txt  README.md  build.ps1
src/: CMakeLists.txt  main.cpp
